Домашнее задание №18 - Практика по работе с микросервисами.